--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,20 +1,36 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+    encoders:
+        AppBundle\Entity\Usuarios: 
+            algorithm: bcrypt
+            cost: 12
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        db_provider:
+            entity: 
+                class: AppBundle:Usuarios
+                property: email
+            
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
-        main:
+        main: 
             anonymous: ~
+            http_basic: ~
+            form_login: 
+                login_path: /catServ
+                check_path: /catServ
+                default_target_path: http://localhost/proyectofinal/proyectoThinder/web/app_dev.php/pagina
+            provider: db_provider
+
+
+    
+
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
